--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: objective-c
 xcode_project: Demo/DLPanableWebViewDemo.xcodeproj # path to your xcodeproj folder
 xcode_scheme: DLPanableWebViewDemo
+
+script:
+- xctool -project Demo/DLPanableWebViewDemo.xcodeproj -scheme DLPanableWebViewDemo build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
